[package]
name = "edrv-ltr390uv"
documentation = "https://docs.rs/edrv-ltr390uv"
description = "Driver for LTR390UV, maintained by the embedded-drivers team"
keywords = ["no-std", "embedded", "embedded-hal-driver"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
embedded-hal.workspace = true
embedded-hal-async.workspace = true

[features]
default = []
std = []
