[package]
name = "edrv-ssd1327"
documentation = "https://docs.rs/edrv-ssd1327"
description = "Driver for SSD1327, maintained by the embedded-drivers team"
keywords = ["no-std", "embedded", "embedded-hal-driver"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
embedded-hal.workspace = true
embedded-hal-async.workspace = true

[features]
default = []
std = []
