[package]
name = "edrv-st7735"
documentation = "https://docs.rs/edrv-st7735"
description = "Driver for ST7735, maintained by the embedded-drivers team"
keywords = ["no-std", "embedded", "embedded-hal-driver"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-graphics-core.workspace = true

[features]
default = []
std = []
