[package]
name = "edrv-{{ project-name }}"
documentation = "https://docs.rs/edrv-{{ project-name }}"
description = "Driver for {{ chip_name }}, maintained by the embedded-drivers team"
keywords = ["no-std", "embedded", "embedded-hal-driver"]
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
embedded-hal.workspace = true

[features]
default = []
std = []
